deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: style-transfer-app-deployment
  labels:
    app: style-transfer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: style-transfer
  template:
    metadata:
      labels:
        app: style-transfer
    spec:
      containers:
      - name: style-transfer
        image: mattbricaire/mise-en-production:v1.0.0
        ports:
        - containerPort: 8000
