deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: style-transfer-service
spec:
  selector:
    app: style-transfer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
